test/compilable/imports/test8667b.d
module imports.test8667b;

void split(T)(T k)
if (is(T : string))
{
}
