test/fail_compilation/test314a.d
module test314a;

import imports.test314a;

void foo()
{
    imports.test314imp.foo();
}
